fixed the annoying gap between workspace icons

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -4,23 +4,24 @@
   border: none;
   border-radius: 0;
   font-family: "JetBrainsMono Nerd Font", Material, "Material Design Icons";
-  font-size: 15px;
+  font-size: 17px;
 }
 
 window#waybar {
   background-color:@background;
   color: @foreground;
   transition-property: background-color;
-  transition-duration: .5s;
+  transition-duration: 1.5s;
 }
 
 #workspaces button {
   background-color: @background;
+  padding: 0 0 0 3px;
   color: @foreground;
 }
 
 #workspaces button.visible {
-  box-shadow: inset 0 -3px #887E61;
+  box-shadow: inset 0 -0px #887E61;
 
 }
 
